--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Rozeen Zorzis and this is my first webapp.
+            <h4>This Is A New Heading</h4>
+            I've made some changes locally
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
