--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,25 +4,39 @@
         Article two | Rozeen Zorzis
     </title>
     <meta name="viewport" content ="width=device-width, initial-scale=1">
+     <style>
+        .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: #8a8db5;
+                font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
+    
+        }
+    </style>
 </head>   
 <body>
-    <div>
-        <a href="/">Home</a>
-    </div>
-    <hr/>
-    <h3>
-        Article two
-    </h3>
-    <div>
-        August 21,2017
-    </div>
-    <div>
-       <p>This is the content of my second article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article. 
-       </p>
-       <p>This is the content of my second article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article. 
-       </p>
-       <p>This is the content of my second article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article. 
-       </p>
+   <div class="container">
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article two
+        </h3>
+        <div>
+            August 21,2017
+        </div>
+        <div>
+           <p>This is the content of my second article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article. 
+           </p>
+           <p>This is the content of my second article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article. 
+           </p>
+           <p>This is the content of my second article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article. 
+           </p>
+        </div>
     </div>
 </body>
 </html>
