--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
             <h4>This Is A New Heading</h4>
             I've made some changes locally
         </div>
+        <script>
+            alert('hi,I\'m javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
