--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://scontent.fdel1-1.fna.fbcdn.net/v/t1.0-9/20841744_300872510380547_6537787677718008520_n.jpg?oh=4fac95b6e5f7380bcd4d42471ce128a9&oe=59F140DE" class="img-medium"/>
         </div>
         <br>
         <div id='main-text' class="center text-big bold">
