--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,16 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id='madi' src="https://scontent.fdel1-1.fna.fbcdn.net/v/t1.0-9/20841744_300872510380547_6537787677718008520_n.jpg?oh=4fac95b6e5f7380bcd4d42471ce128a9&oe=59F140DE" class="img-medium"/>
-        </div>
-        <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am Rozeen Zorzis and this is my first webapp.
-            <h4>This Is A New Heading</h4>
-            I've made some changes locally
+        <div>
+            <div class="center">
+                <img id='madi' src="https://scontent.fdel1-1.fna.fbcdn.net/v/t1.0-9/20841744_300872510380547_6537787677718008520_n.jpg?oh=4fac95b6e5f7380bcd4d42471ce128a9&oe=59F140DE" class="img-medium"/>
+            </div>
+            <br>
+            <div id='main-text' class="center text-big bold">
+                Hi! I am Rozeen Zorzis and this is my first webapp.
+                <h4>This Is A New Heading</h4>
+                I've made some changes locally
+            </div>
         </div>
         <script>
             alert('hi,I\'m javascript');
