[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img id='madi' src="https://scontent.fdel1-1.fna.fbcdn.net/v/t1.0-9/20841744_300872510380547_6537787677718008520_n.jpg?oh=4fac95b6e5f7380bcd4d42471ce128a9&oe=59F140DE" class="img-medium"/>
+                <img id='madi' src="https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/19884145_286466621821136_8525902044272288867_n.jpg?oh=fac6a80a89b10e3dd8c9b37c76db3a35&oe=5AADD25B" class="img-medium"/>
             </div>
             <br>
             <h3>Personal</h3>
