--- a/ui/reg.html
+++ b/ui/reg.html
@@ -1,1 +1,46 @@
+<!doctype html>
+<html>
+    <head>
+        <title>E-Health Care</title>
+        <style type="text/css">
+ 
+            body {font-family:Arial, Sans-Serif;}
+ 
+            #container {width:300px; margin:0 auto;}
+ 
+            /* Nicely lines up the labels. */
+            form label {display:inline-block; width:140px;}
+ 
+            /* You could add a class to all the input boxes instead, if you like. That would be safer, and more backwards-compatible */
+            form input[type="text"],
+            form input[type="password"]
+            {width:160px;}
+ 
+            form .line {clear:both;}
+            form .line.submit {text-align:right;}
+ 			
+ 			.red{
+ 					color: red;
+ 			}
+
+        </style>
+    </head>
+    <body>
+        <div id="container">
+            <form>
+                <h1>REGISTRATION</h1>
+                <div class="line"><label for="Name">Name <div class="red">*</div>:</label><input type="text" id="Name" /></div>
+                <div class="line"><label for="Age">Age<div class="red">*</div>:</label><input type="int" id="Age" /></div>
+                <div class="line"><label for="Contact_No">Contact_No<div class="red">*</div>:</label><input type="text" id="Contact_No" /></div>
+                <div class="line"><label for="DOB">DOB<div class="red">*</div>:</label><input type="text" id="DOB" /></div>
+                <div class="line"><label for="Sex">Sex<div class="red">*</div>:</label><input type="text" id="Sex" /></div>
+                <div class="line"><label for="City">City<div class="red">*</div>:</label><input type="text" id="City" /></div>
+                <div class="line"><label for="ID">ID<div class="red">*</div>:</label><input type="text" id="ID" /></div>
+                <div class="line submit"><input type="submit" value="Submit" /></div>
+ 
+                <p>Note: Please make sure your details are correct before submitting form and that all fields marked with<div class="red"> *</div> are completed!.</p>
+            </form>
+        </div>
+    </body>
+</html>
 
