[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -36,7 +36,7 @@
                 <div class="line"><label for="Sex">Sex<div class="red">*</div>:</label><input type="text" id="Sex" /></div>
                 <div class="line"><label for="City">City<div class="red">*</div>:</label><input type="text" id="City" /></div>
                 <div class="line"><label for="ID">ID<div class="red">*</div>:</label><input type="text" id="ID" /></div>
-                <div class="line submit"><input type="submit" value="Submit" /></div>
+               <center><div class="line submit"><input type="submit" value="Submit" /></div></center>
                 <hr>
  
                 <p>Note: Please make sure your details are correct before submitting form and that all fields marked with<div class="red"> *</div> are completed!.</p>
