[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -17,7 +17,7 @@
             {width:160px;}
  
             form .line {clear:both;}
-            form .line.submit {text-align:right;}
+            form .line.submit {text-align:center;}
  			
  			.red{
  					color: red;
@@ -36,7 +36,7 @@
                 <div class="line"><label for="Sex">Sex<div class="red">*</div>:</label><input type="text" id="Sex" /></div>
                 <div class="line"><label for="City">City<div class="red">*</div>:</label><input type="text" id="City" /></div>
                 <div class="line"><label for="ID">ID<div class="red">*</div>:</label><input type="text" id="ID" /></div>
-               <center><div class="line submit"><input type="submit" value="Submit" /></div></center>
+               <div class="line submit"><input type="submit" value="Submit" /></div>
                 <hr>
  
                 <p>Note: Please make sure your details are correct before submitting form and that all fields marked with<div class="red"> *</div> are completed!.</p>
