[imad-console] Updates ui/medicaldata.html

--- a/ui/medicaldata.html
+++ b/ui/medicaldata.html
@@ -29,14 +29,14 @@
         <div id="container">
             <form>
                 <h1>Medical Record</h1>
-                
+                 <div class="line submit"><button type="submit">Click Here To Start Your Checkup</button></div>
                 <div class="line"><label for="HeartRate">Heart Rate <div class="red">*</div>:</label><input type="number" id="HeartRate" step=".01" /></div>
                 <div class="line"><label for="Weight">Weight<div class="red">*</div>:</label><input type="number" id="Weight" step=".01" /></div>
                 <div class="line"><label for="Height">Height<div class="red">*</div>:</label><input type="number" id="Height" step=".01" /></div>
                 <div class="line"><label for="BMI">BMI<div class="red">*</div>:</label><input type="number" id="BMI" step=".01"></div>
                 <div class="line"><label for="UserID">UserID<div class="red">*</div>:</label><input type="int" id="UserID" /></div>
                 <br/>
-               <div class="line submit"><input type="submit" value="Submit" /></div>
+               <div class="line submit"><input type="submit" value="Submit" />
                
             </form>
         </div>
