--- a/ui/medicaldata.html
+++ b/ui/medicaldata.html
@@ -28,7 +28,7 @@
     <body>
         <div id="container">
             <form>
-                <h1>Medical Record</h1>
+               <center><h1>Medical Record</h1></center> 
                  <div class="line submit"><button type="submit">Click Here To Start Your Checkup</button></div>
                 <div class="line"><label for="HeartRate">Heart Rate <div class="red">*</div>:</label><input type="number" id="HeartRate" step=".01" /></div>
                 <div class="line"><label for="Weight">Weight<div class="red">*</div>:</label><input type="number" id="Weight" step=".01" /></div>
