[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -28,8 +28,9 @@
     <body>
         <div id="container">
             <form>
-                <h1>REGISTRATION</h1>
+                <center><h1>REGISTRATION</h1></center>
                 <hr>
+                <br/>
                 <div class="line"><label for="Name">Name <div class="red">*</div>:</label><input type="text" id="Name" /></div>
                 <div class="line"><label for="Age">Age<div class="red">*</div>:</label><input type="int" id="Age" /></div>
                 <div class="line"><label for="Contact_No">Contact_No<div class="red">*</div>:</label><input type="text" id="Contact_No" /></div>
