[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -31,7 +31,7 @@
                 <center><h1>REGISTRATION</h1></center>
                 <hr>
                 <br/>
-                <div class="line"><label for="Name">Name  <span color="red">*</span>:</label><input type="text" id="Name" /></div>
+                <div class="line"><label for="Name">Name  <span class="red"> * </span> : </label><input type="text" id="Name" /></div>
                 <div class="line"><label for="Age">Age<div class="red">*</div>:</label><input type="int" id="Age" /></div>
                 <div class="line"><label for="Contact_No">Contact_No<div class="red">*</div>:</label><input type="text" id="Contact_No" /></div>
                 <div class="line"><label for="DOB">DOB<div class="red">*</div>:</label><input type="text" id="DOB" /></div>
