[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -31,12 +31,12 @@
                 <center><h1>REGISTRATION</h1></center>
                 <hr>
                 <br/>
-                <div class="line"><label for="Name">Name  <span class="red"> * </span> : </label><input type="text" id="Name" /></div>
-                <div class="line"><label for="Age">Age  <span class="red"> * </span> : </label><input type="int" id="Age" /></div>
-                <div class="line"><label for="Contact_No">Contact_No  <span class="red"> * </span> : </label><input type="text" id="Contact_No" /></div>
-                <div class="line"><label for="DOB">DOB  <span class="red"> * </span> : </label><input type="text" id="DOB" /></div>
-                <div class="line"><label for="Sex">Sex  <span class="red"> * </span> : </label><input type="text" id="Sex" /></div>
-                <div class="line"><label for="City">City  <span class="red"> * </span> : </label><input type="text" id="City" /></div>
+                <div class="line"><label for="Name">Name  <span class="red"> * </span> : </label><input type="text" id="Name" /></div><br/>
+                <div class="line"><label for="Age">Age  <span class="red"> * </span> : </label><input type="int" id="Age" /></div><br/>
+                <div class="line"><label for="Contact_No">Contact_No  <span class="red"> * </span> : </label><input type="text" id="Contact_No" /></div><br/>
+                <div class="line"><label for="DOB">DOB  <span class="red"> * </span> : </label><input type="text" id="DOB" /></div><br/>
+                <div class="line"><label for="Sex">Sex  <span class="red"> * </span> : </label><input type="text" id="Sex" /></div><br/>
+                <div class="line"><label for="City">City  <span class="red"> * </span> : </label><input type="text" id="City" /></div><br/>
                 <div class="line"><label for="ID">ID <span class="red"> * </span> : </label><input type="text" id="ID" /></div>
                 <br/>
                <div class="line submit"><input type="submit" value="Submit" /></div>
