[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -42,7 +42,7 @@
                <div class="line submit"><input type="submit" value="Submit" /></div>
                 <hr>
  
-                <p>Note: Please make sure your details are correct before submitting form and that all fields marked with<div class="red"> *</div> are completed!.</p>
+                <p>Note: Please make sure your details are correct before submitting form and that all fields marked with <span class="red"> * </span> are completed!.</p>
             </form>
         </div>
     </body>
