--- a/ui/reg.html
+++ b/ui/reg.html
@@ -42,7 +42,7 @@
                <div class="line submit"><input type="submit" value="Submit" /></div>
                 <hr>
  
-                <p><h3>Note</h3> : Please make sure your details are correct before submitting form and that all fields marked with <span class="red"> * </span> are completed!.</p>
+                <p><h3>Note</h3>:<h4>Please make sure your details are correct before submitting form and that all fields marked with <span class="red"> * </span> are completed!.</h4></p>
             </form>
         </div>
     </body>
