--- a/ui/reg.html
+++ b/ui/reg.html
@@ -22,6 +22,16 @@
  			.red{
  					color: red;
  			}
+ 			.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
 
         </style>
     </head>
@@ -39,7 +49,7 @@
                 <div class="line"><label for="City">City  <span class="red"> * </span> : </label><input type="text" id="City" /></div><br/>
                 <div class="line"><label for="ID">ID <span class="red"> * </span> : </label><input type="text" id="ID" /></div>
                 <br/>
-               <div class="line submit"><input type="submit" value="Submit" /></div>
+               <div class="button"><input type="submit" value="Submit" /></div>
                 <hr>
  
                 <p><h3>Note</h3><h4>Please make sure your details are correct before submitting form and that all fields marked with <span class="red"> * </span> are completed!.</h4></p>
