--- a/ui/reg.html
+++ b/ui/reg.html
@@ -23,15 +23,16 @@
  					color: red;
  			}
  			.button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
+                padding: 10px 24px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                border-radius: 12px;
+                background-color: white;
+                color: black;
+                border: 2px solid #008CBA; /*Blue  */
+            }
 
         </style>
     </head>
