--- a/ui/reg.html
+++ b/ui/reg.html
@@ -23,10 +23,9 @@
  					color: red;
  			}
  			.button {
-                padding: 10px 24px;
+              /*  padding: 10px 24px;*/
                 text-align: center;
                 text-decoration: none;
-               
                 font-size: 16px;
                 border-radius: 12px;
                 background-color: white;
