[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -50,7 +50,7 @@
                 <div class="line"><label for="City">City  <span class="red"> * </span> : </label><input type="text" id="City" /></div><br/>
                 <div class="line"><label for="ID">ID <span class="red"> * </span> : </label><input type="text" id="ID" /></div>
                 <br/>
-               <div class="button"><input type="submit" value="Submit" /></div>
+              <center> <div class="button"><input type="submit" value="Submit" /></div></center>
                 <hr>
  
                 <p><h3>Note</h3><h4>Please make sure your details are correct before submitting form and that all fields marked with <span class="red"> * </span> are completed!.</h4></p>
