--- a/ui/medicaldata.html
+++ b/ui/medicaldata.html
@@ -22,6 +22,18 @@
  			.red{
  					color: red;
  			}
+ 				.button {
+                padding: 10px 24px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                border-radius: 12px;
+                background-color: white;
+                color: black;
+                border: 2px solid #008CBA; /*Blue  */
+            }
+
 
         </style>
     </head>
@@ -31,14 +43,14 @@
                <center><h1>Medical Record</h1></center> 
                <hr>
                <br/>
-                 <div class="line submit"><button type="submit">Click Here To Start Your Checkup</button></div>
-                <div class="line"><label for="HeartRate">Heart Rate <div class="red">*</div>:</label><input type="number" id="HeartRate" step=".01" /></div>
-                <div class="line"><label for="Weight">Weight<div class="red">*</div>:</label><input type="number" id="Weight" step=".01" /></div>
-                <div class="line"><label for="Height">Height<div class="red">*</div>:</label><input type="number" id="Height" step=".01" /></div>
-                <div class="line"><label for="BMI">BMI<div class="red">*</div>:</label><input type="number" id="BMI" step=".01"></div>
-                <div class="line"><label for="UserID">UserID<div class="red">*</div>:</label><input type="int" id="UserID" /></div>
+                 <div class="button"><button type="submit">Click Here To Start Your Checkup</button></div>
+                <div class="line"><label for="HeartRate">Heart Rate <span class="red"> * </span> : </label><input type="number" id="HeartRate" step=".01" /></div>
+                <div class="line"><label for="Weight">Weight  <span class="red"> * </span> : </label><input type="number" id="Weight" step=".01" /></div>
+                <div class="line"><label for="Height">Height  <span class="red"> * </span> : </label><input type="number" id="Height" step=".01" /></div>
+                <div class="line"><label for="BMI">BMI  <span class="red"> * </span> : </label><input type="number" id="BMI" step=".01"></div>
+                <div class="line"><label for="UserID">UserID  <span class="red"> * </span> : </label><input type="int" id="UserID" /></div>
                 <br/>
-               <div class="line submit"><input type="submit" value="Submit" />
+               <div class="button"><input type="submit" value="Submit" />
                
             </form>
         </div>
