[imad-console] Updates ui/medicaldata.html

--- a/ui/medicaldata.html
+++ b/ui/medicaldata.html
@@ -43,11 +43,11 @@
                <center><h1>Medical Record</h1></center> 
                <hr>
                <br/>
-                 <div class="button"><button type="submit">Click Here To Start Your Checkup</button></div>
-                <div class="line"><label for="HeartRate">Heart Rate <span class="red"> * </span> : </label><input type="number" id="HeartRate" step=".01" /></div>
-                <div class="line"><label for="Weight">Weight  <span class="red"> * </span> : </label><input type="number" id="Weight" step=".01" /></div>
-                <div class="line"><label for="Height">Height  <span class="red"> * </span> : </label><input type="number" id="Height" step=".01" /></div>
-                <div class="line"><label for="BMI">BMI  <span class="red"> * </span> : </label><input type="number" id="BMI" step=".01"></div>
+                 <div class="button"><button type="submit">Click Here To Start Your Checkup</button></div><br/>
+                <div class="line"><label for="HeartRate">Heart Rate <span class="red"> * </span> : </label><input type="number" id="HeartRate" step=".01" /></div><br/>
+                <div class="line"><label for="Weight">Weight  <span class="red"> * </span> : </label><input type="number" id="Weight" step=".01" /></div><br/>
+                <div class="line"><label for="Height">Height  <span class="red"> * </span> : </label><input type="number" id="Height" step=".01" /></div><br/>
+                <div class="line"><label for="BMI">BMI  <span class="red"> * </span> : </label><input type="number" id="BMI" step=".01"></div><br/>
                 <div class="line"><label for="UserID">UserID  <span class="red"> * </span> : </label><input type="int" id="UserID" /></div>
                 <br/>
                <div class="button"><input type="submit" value="Submit" />
