[imad-console] Updates ui/medicaldata.html

--- a/ui/medicaldata.html
+++ b/ui/medicaldata.html
@@ -49,8 +49,8 @@
                 <div class="line"><label for="Height">Height  <span class="red"> * </span> : </label><input type="number" id="Height" step=".01" /></div><br/>
                 <div class="line"><label for="BMI">BMI  <span class="red"> * </span> : </label><input type="number" id="BMI" step=".01"></div><br/>
                 <div class="line"><label for="UserID">UserID  <span class="red"> * </span> : </label><input type="int" id="UserID" /></div>
-                <br/>
-               <div class="button"><input type="submit" value="Submit" />
+                <br/><hr>
+              <center><div class="button"><input type="submit" value="Submit" /></center>
                
             </form>
         </div>
