[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -43,11 +43,13 @@
                 <hr>
                 <br/>
                 <div class="line"><label for="Name">Name  <span class="red"> * </span> : </label><input type="text" id="Name" /></div><br/>
+                <div class="line"><label for="Username">Username  <span class="red"> * </span> : </label><input type="text" id="Username" /></div><br/>
                 <div class="line"><label for="Age">Age  <span class="red"> * </span> : </label><input type="int" id="Age" /></div><br/>
                 <div class="line"><label for="Contact_No">Contact_No  <span class="red"> * </span> : </label><input type="text" id="Contact_No" /></div><br/>
                 <div class="line"><label for="DOB">DOB  <span class="red"> * </span> : </label><input type="text" id="DOB" /></div><br/>
                 <div class="line"><label for="Sex">Sex  <span class="red"> * </span> : </label><input type="text" id="Sex" /></div><br/>
                 <div class="line"><label for="City">City  <span class="red"> * </span> : </label><input type="text" id="City" /></div><br/>
+                <div class="line"><label for="Password">Password <span class="red"> * </span> :</label><input type="password" id="Password" /></div>
                 <div class="line"><label for="ID">ID <span class="red"> * </span> : </label><input type="text" id="ID" /></div>
                 <br/>
             
