[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -49,7 +49,7 @@
                 <div class="line"><label for="DOB">DOB  <span class="red"> * </span> : </label><input type="text" id="DOB" /></div><br/>
                 <div class="line"><label for="Sex">Sex  <span class="red"> * </span> : </label><input type="text" id="Sex" /></div><br/>
                 <div class="line"><label for="City">City  <span class="red"> * </span> : </label><input type="text" id="City" /></div><br/>
-                <div class="line"><label for="Password">Password <span class="red"> * </span> :</label><input type="password" id="Password" /></div>
+                <div class="line"><label for="Password">Password <span class="red"> * </span> :</label><input type="password" id="Password" /></div><br/>
                 <div class="line"><label for="ID">ID <span class="red"> * </span> : </label><input type="text" id="ID" /></div>
                 <br/>
             
