--- a/ui/login.html
+++ b/ui/login.html
@@ -43,13 +43,13 @@
                 <hr>
                 <br/>
                 
-                <div class="line"><label for="Username">Username  <span class="red"> * </span> : </label><input type="text" id="Username" /></div><br/>
-                <div class="line"><label for="Password">Password <span class="red"> * </span> :</label><input type="password" id="Password" /></div><br/>
+                <div class="line"><label for="Username">Username : </label><input type="text" id="Username" /></div><br/>
+                <div class="line"><label for="Password">Password :</label><input type="password" id="Password" /></div><br/>
               
                 <br/>
                 <hr>
  
-                  <center> <div class="button"><input type="submit" value="LOGIN" /></div></center>
+                  <center> <div class="button"><input type="submit" value="LOGIN"></div></center>
             </form>
         </div>
     </body>
