--- a/ui/reg.html
+++ b/ui/reg.html
@@ -57,6 +57,8 @@
  
                 <p><h3>Note</h3><h4>Please make sure your details are correct before submitting form and that all fields marked with <span class="red"> * </span> are completed!.</h4></p>
                 <hr>
+                
+                 <p>Already Have An Account??<center><div class="button"><input type="submit" value="LOGIN" /></center></p>
                   <center> <div class="button"><input type="submit" value="Submit" /></div></center>
             </form>
         </div>
