--- a/ui/reg.html
+++ b/ui/reg.html
@@ -17,7 +17,7 @@
             {width:160px;}
  
             form .line {clear:both;}
-            form .line.submit {text-align:center;}
+            form .line.submit {text-align:left;}
  			
  			.red{
  					color: red;
@@ -58,7 +58,7 @@
                 <p><h3>Note</h3><h4>Please make sure your details are correct before submitting form and that all fields marked with <span class="red"> * </span> are completed!.</h4></p>
                 <hr>
                 
-                 <p>Already Have An Account??<div class="line submit"><input type="submit" value="LOGIN" /></p>
+                 <p>Already Have An Account??<div class="line submit"><input type="submit" value="LOGIN" /></div></p>
                   <center> <div class="button"><input type="submit" value="Submit" /></div></center>
             </form>
         </div>
