[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -57,8 +57,8 @@
  
                 <p><h3>Note</h3><h4>Please make sure your details are correct before submitting form and that all fields marked with <span class="red"> * </span> are completed!.</h4></p>
                 <hr>
+                <p>Already Have An Account??<button><a href="http://rozeenzorzis.imad.hasura-app.io/login">LOGIN</a></button></p><hr>
                 
-                 <p>Already Have An Account??<a href="http://rozeenzorzis.imad.hasura-app.io/login"><input type="submit" value="LOGIN" /></p></a><hr>
                   <center> <div class="button"><input type="submit" value="Submit" /></div></center>
             </form>
         </div>
