[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>E-Health Care</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <style type="text/css">
  
             body {font-family:Arial, Sans-Serif;}
@@ -38,7 +39,7 @@
     </head>
     <body>
         <div id="container">
-            <form>
+            <form name="REGISTRATION" action="REGISTRATION.php" method="POST">
                 <center><h1>REGISTRATION</h1></center>
                 <hr>
                 <br/>
