[imad-console] Updates ui/reg.html

--- a/ui/reg.html
+++ b/ui/reg.html
@@ -39,7 +39,7 @@
     </head>
     <body>
         <div id="container">
-            <form name="REGISTRATION" action="REGISTRATION.php" method="POST">
+            <form name="REGISTRATION" action="ui/REGISTRATION.php" method="POST">
                 <center><h1>REGISTRATION</h1></center>
                 <hr>
                 <br/>
