[imad-console] Updates ui/medicaldata.html

--- a/ui/medicaldata.html
+++ b/ui/medicaldata.html
@@ -43,7 +43,7 @@
                <center><h1>Medical Record</h1></center> 
                <hr>
                <br/>
-                 <center><div class="button"><button type="submit">Click Here To Start Your Checkup</button></div><br/><hr></center>
+                 <center><div class="button"><button type="submit">Click Here To Start Your Checkup</button></div><br/><hr></center><br>
                 <div class="line"><label for="HeartRate">Heart Rate <span class="red"> * </span> : </label><input type="number" id="HeartRate" step=".01" /></div><br/>
                 <div class="line"><label for="Weight">Weight  <span class="red"> * </span> : </label><input type="number" id="Weight" step=".01" /></div><br/>
                 <div class="line"><label for="Height">Height  <span class="red"> * </span> : </label><input type="number" id="Height" step=".01" /></div><br/>
